
- webhelpers2.containers

  * [bug][py3k] Fix ``ordered_items`` when ``other_keys`` is set

- webhelpers2.html.builder

  * Add "checked" and "selected" to list of boolean attributes.
  * [bug] Fix "unknown keyword args" reporting in ``HTML()``

- webhelpers2.html.tags

  * [bug] Fix OptGroup.__repr__ to list its arguments in the correct order

- webhelpers2.html.tools

  * [bug] Properly escape the string passed to ``js_obfuscate``.

- webhelpers2.misc

  * [feature] Reinstate formatted exceptions with ``StudlyException``
    class. (Replaces 'DeclarativeException' which was deleted in 2.0b1.)
  * [bug] format_exception() did not work if called with ``exc=None`` (due
    to missing ``import sys``.)

- webhelpers2.number

  * [bug] The format size helpers now format negative numbers correctly.
    Previously they passed the number unchanged and appended the unit
    suffix, which changed the quantity.
  * [bug] median() was not computing the median correctly for
    even-length sequences

- webhelpers2.text

  * [feature] New helper ``wrap_long_lines()``.
  * [bug] excerpt() now works correctly when ``text`` is a ``literal``.
  * [bug] wrap_paragraphs() now works when ``width`` is a
    ``textwrap.TextWrapper`` instance.

2.0rc1 (2014-09-22)
-------------------

- webhelpers.html._literal

  * Implementation of 'literal' moved to this private module.
  * New method .lit_join() works like .join() but does not escape the parts.

- webhelpers.html.builder:

  * 'HTMLBuilder.\_\_call\_\_()' accepts keyword args 'nl' and 'lit'. If 'nl'
    is true, add a newline after each element. If 'lit' is true, don't escape
    the elements when joining them.
  * 'HTMLBuilder.literal()' is the 'literal' class constructor. As a
    consequence it no longer accepts multiple positional args.
    Use '.\_\_call\_\_()' with 'lit=True' as an alternative.
  * '.comment()' adds a space before and after the content.